--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 bin
+
+# Personal tracking
+steps.md
+
+# Environment secrets
+.env
+.env.local
+.env.*.local
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Binary
+*.exe
