refactor(docs): consolidate API documentation
- Move api/API_ENDPOINTS_DETAILED.md to docs/api/
- Remove api/ directory
- Remove outdated docs/api/API_ENDPOINTS.md and docs/api/POSTMAN.md

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@ Thumbs.db
 
 # Binary
 *.exe
+server
 
 # Archive directory (documentation, reports)
 archive/
+
+# SQLC Generated Code
+internal/database/db_gen/
+.context
