--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ steps.md
 .env
 .env.local
 .env.*.local
+.context
 
 # IDE
 .idea/
@@ -20,7 +21,7 @@ Thumbs.db
 
 # Binary
 *.exe
-server
+./server
 
 # Archive directory (documentation, reports)
 archive/
@@ -28,3 +29,4 @@ archive/
 # SQLC Generated Code
 internal/database/db_gen/
 .context
+internal/database/db_gen/internal/database/db_gen/
