--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ steps.md
 .env.*.local
 .context
 
+# LOGS
+server.log
+
 # IDE
 .idea/
 .vscode/
@@ -22,6 +25,8 @@ Thumbs.db
 # Binary
 *.exe
 ./server
+./server*
+.serena*
 
 # Archive directory (documentation, reports)
 archive/
@@ -30,3 +35,9 @@ archive/
 internal/database/db_gen/
 .context
 internal/database/db_gen/internal/database/db_gen/
+
+# Plugin binaries
+plugin_bins/*
+server
+server*
+./plugins/windows-winrm/windows-winrm
