--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,6 +7,28 @@ sql:
       go:
         package: "db_gen"
         out: "internal/database/db_gen"
-        sql_package: "database/sql"
+        sql_package: "pgx/v5"
         emit_json_tags: true
         emit_interface: true
+        overrides:
+          - db_type: "uuid"
+            go_type:
+              import: "github.com/google/uuid"
+              type: "UUID"
+          - db_type: "pg_catalog.uuid"
+            go_type:
+              import: "github.com/google/uuid"
+              type: "UUID"
+          - db_type: "uuid"
+            nullable: true
+            go_type:
+              import: "github.com/google/uuid"
+              type: "NullUUID"
+          - db_type: "inet"
+            go_type:
+              import: "net/netip"
+              type: "Addr"
+          - db_type: "jsonb"
+            go_type:
+              import: "encoding/json"
+              type: "RawMessage"
