--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,8 +5,8 @@ sql:
     engine: "postgresql"
     gen:
       go:
-        package: "db_gen"
-        out: "internal/database/db_gen"
+        package: "dbgen"
+        out: "internal/database/dbgen"
         sql_package: "pgx/v5"
         emit_json_tags: true
         emit_interface: true
