--- a/plugin/windows-winrm/manifest.json
+++ b/plugin/windows-winrm/manifest.json
@@ -1,10 +1,4 @@
 {
-  "id": "windows-winrm",
   "name": "Windows Server (WinRM)",
-  "version": "1.0.0",
-  "description": "Collects CPU, memory, disk, and network metrics from Windows servers via WinRM",
-  "protocol": "winrm",
-  "default_port": 5985,
-  "supported_metrics": ["host.cpu", "host.memory", "host.storage", "net.interface"],
-  "timeout_ms": 10000
+  "protocol": "winrm"
 }
