--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -11,19 +11,12 @@ sql:
         emit_json_tags: true
         emit_interface: true
         overrides:
+          - db_type: "timestamptz"
+            go_type: "time.Time"
           - db_type: "uuid"
-            go_type:
-              import: "github.com/google/uuid"
-              type: "UUID"
-          - db_type: "pg_catalog.uuid"
-            go_type:
-              import: "github.com/google/uuid"
-              type: "UUID"
-          - db_type: "uuid"
-            nullable: true
-            go_type:
-              import: "github.com/google/uuid"
-              type: "NullUUID"
+            go_type: "int64"
+          - db_type: "int8"
+            go_type: "int64"
           - db_type: "inet"
             go_type:
               import: "net/netip"
